Rewrite README and create focused testing documentation
1. README.md - Aligned with CLAUDE.md principles:
   - Concise overview (reduced from 810 to 390 lines)
   - Clear architecture diagram (14 modules with status)
   - GODSPEED flow highlighted
   - Java 25 optimization metrics
   - Multi-agent coordination examples
   - Docker deployment guide
   - Quality gates and health score

2. TESTING-GUIDE.md - Chicago TDD approach:
   - Outside-in testing pyramid (System → Integration → Unit)
   - Quick commands for all test scenarios
   - Test organization and naming conventions
   - JaCoCo coverage gates (65% line / 55% branch)
   - Test templates with best practices
   - Common issues and debugging
   - Performance targets for CI/CD

Focus: Information density without repetition. Links to detailed docs.

https://claude.ai/code/session_01UcjChRygdoCim2xYnow9V4